[package]
name = "y2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
memoize = "0.3.1"
pathfinding = "4.0.0"

aoc = { path = "./aoc" }
aoc_derive = { path = "./aoc_derive" }
paste = "1.0.9"
rayon = "1.6.0"
trees = "0.4.2"
serde_json = "1.0.89"
serde = "1.0.149"
